syntax = "proto3";
package inventory;

option go_package = "goapptemp/internal/adapter/api/grpc/pb;pb";

message Product {
  uint32 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  int32 stock = 5;
}

message Reservation {
  uint32 id = 1;
  uint32 product_id = 2;
  uint32 order_id = 3;
  int32 quantity = 4;
  string status = 5;
}

message ListProductsRequest {
  int32 page = 1;
  int32 per_page = 2;
  string search = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message GetProductRequest { uint32 id = 1; }
message GetProductResponse { Product product = 1; }

message CreateReservationRequest { Reservation reservation = 1; }
message CreateReservationResponse { Reservation reservation = 1; }

message ListReservationsRequest { int32 page = 1; int32 per_page = 2; }
message ListReservationsResponse { repeated Reservation reservations = 1; int32 total = 2; }
message GetReservationRequest { uint32 id = 1; }
message GetReservationResponse { Reservation reservation = 1; }

service InventoryService {
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);

  rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse);
  rpc ListReservations (ListReservationsRequest) returns (ListReservationsResponse);
  rpc GetReservation (GetReservationRequest) returns (GetReservationResponse);
}
